// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectSwitcher /> should render properly with data 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px;
  padding-left: 16px;
  color: #73b61c;
  font-weight: 400;
  height: 100%;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover {
  background-color: #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-left: 8px;
}

<div
  className="emotion-3"
>
  <button
    className="emotion-2"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    <div
      className="emotion-1"
    >
      qwerty
      <svg
        className="emotion-0"
        data-file-name="chevron.svg"
        height={20}
      />
    </div>
  </button>
</div>
`;

exports[`<ProjectSwitcher /> should render properly with data 2`] = `
.emotion-6 {
  position: relative;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 8px;
  padding-left: 16px;
  color: #73b61c;
  font-weight: 400;
  height: 100%;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover {
  background-color: #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-left: 8px;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-5 {
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 0;
  background-color: #808080;
  border-radius: 2px;
  box-shadow: 0 4px 7px 0 #000000;
  min-width: 200px;
}

.emotion-5 ul {
  list-style-type: none;
  padding: 0;
  padding-top: 4px;
  padding-bottom: 4px;
  margin: 0;
}

.emotion-5 li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px;
  font-weight: 400;
  border-radius: 0;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover {
  background-color: #4a4a4a;
}

<div
  className="emotion-6"
>
  <button
    className="emotion-2"
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  >
    <div
      className="emotion-1"
    >
      qwerty
      <svg
        className="emotion-0"
        data-file-name="chevron.svg"
        height={20}
      />
    </div>
  </button>
  <div
    className="emotion-5"
  >
    <ul>
      <li>
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onBlur={[Function]}
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          qwerty
        </a>
      </li>
      <li>
        <a
          className="emotion-3"
          href="/e93cbadb-e5ae-4598-8395-4cf5b30c0e94/jobs"
          onBlur={[Function]}
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          azerty
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ProjectSwitcher /> should render properly with one project 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  color: #73b61c;
}

<div
  className="emotion-0"
>
  qwerty
</div>
`;

exports[`<ProjectSwitcher /> should render properly without data 1`] = `null`;
